@@ -14,7 +14,6 @@
 ;;
 ;;   (add-to-list 'load-path "<directory-of-this-file>")
 ;;   (add-hook 'slime-load-hook (lambda () (require 'slime-editing-commands)))
-;;   (add-hook 'slime-mode-hook 'slime-bind-editing-commands)
 ;;
 
 (defun slime-beginning-of-defun ()
@@ -182,9 +181,11 @@ be treated as a paragraph.  This is useful for filling docstrings."
           (setf end (point)))
         (indent-region start end nil)))))
 
-(defun slime-bind-editing-commands ()
+(defun slime-editing-commands-init ()
   (define-key slime-mode-map "\M-\C-a"  'slime-beginning-of-defun)
   (define-key slime-mode-map "\M-\C-e"  'slime-end-of-defun)
   (define-key slime-mode-map "\C-c\M-q" 'slime-reindent-defun))
+
+(slime-editing-command-init)
 
 (provide 'slime-editing-commands)
